--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.html",
     "scripts": {
         "test": "mocha tests",
-        "start": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1"
+        "playwright": "npx playwright test tests/ui.test.js",
+        "start-frontend": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
+        "start-backend": "node server.server.js",
+        "start": "npm-run-all --parallel start-frontend start-backend"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +21,7 @@
         "chai": "4.3.4",
         "http-server": "0.12.3",
         "mocha": "8.3.2",
+        "npm-run-all": "^4.1.5",
         "playwright-chromium": "1.9.2"
     }
 }
