--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "test": "mocha tests",
         "playwright": "npx playwright test tests/ui.test.js",
         "start-frontend": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
-        "start-backend": "node server/server.js",
-        "start": "npm-run start-frontend & start-backend"
+        "start-backend": "node server/server.js"       
     },
     "author": "",
     "license": "ISC",
@@ -20,8 +19,7 @@
         "@playwright/test": "^1.39.0",
         "chai": "4.3.4",
         "http-server": "0.12.3",
-        "mocha": "8.3.2",
-        "npm-run-all": "^4.1.5",
+        "mocha": "8.3.2",       
         "playwright-chromium": "1.9.2"
     }
 }
