--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "mocha tests",
         "playwright": "npx playwright test tests/ui.test.js",
         "start-frontend": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
-        "start-backend": "node server/server.js"       
+        "start-backend": "node server/server.js",
+        "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\""
     },
     "author": "",
     "license": "ISC",
@@ -18,8 +19,9 @@
     "devDependencies": {
         "@playwright/test": "^1.39.0",
         "chai": "4.3.4",
+        "concurrently": "^8.2.2",
         "http-server": "0.12.3",
-        "mocha": "8.3.2",       
+        "mocha": "8.3.2",
         "playwright-chromium": "1.9.2"
     }
 }
