--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -13,10 +13,13 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Install Node modules 18.x
+      - name: Setup Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x          
+          node-version: 18.x
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
       - name: Start the app
         run: npm run start
       - name: Run the tests
