--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Start the app
-        run: npm run start
+        run: npm run start &
       - name: Run the tests
         run: npm run playwright
