--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -22,5 +22,7 @@ jobs:
         run: npm install
       - name: Start the app
         run: npm run start &
+      - name: Install playwright
+        run: npx playwright install
       - name: Run the tests
         run: npm run playwright
