Final CI workflow

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: "npm"      
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
       - name: Start the app
         run: npm run start &
       - name: Install playwright
