--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "1.0.0",
     "description": "Online Book Library Single Page Application",
     "main": "index.html",
-    "scripts": {
-        "test": "mocha tests",
-        "playwright": "npx playwright test tests/ui.test.js",
+    "scripts": {        
+        "test-playwright": "npx playwright test tests/ui.test.js",
         "start-frontend": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
         "start-backend": "node server/server.js",
         "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\""
@@ -17,11 +16,9 @@
         "page": "^1.11.6"
     },
     "devDependencies": {
-        "@playwright/test": "^1.39.0",
-        "chai": "4.3.4",
+        "@playwright/test": "^1.39.0",        
         "concurrently": "^8.2.2",
-        "http-server": "0.12.3",
-        "mocha": "8.3.2",
+        "http-server": "0.12.3",        
         "playwright-chromium": "1.9.2"
     }
 }
