--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install playwright
         run: npx playwright install
       - name: Run the tests
-        run: npm run playwright
+        run: npm run test-playwright
   
   deploy:
     runs-on: ubuntu-latest
