--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -2,7 +2,7 @@ name: Library-Catalog CI/CD
 
 on:
   push:
-    branches: ["main"]
+    branches: []
   pull_request:
     branches: ["main"]
   workflow_dispatch:
@@ -30,7 +30,11 @@ jobs:
   
   deploy-backend:
     runs-on: ubuntu-latest
-    needs: build  
+    needs: build 
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.action == 'closed' &&
+      github.event.pull_request.base.ref == 'main'
     steps:
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
