--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -32,8 +32,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: build     
     steps:
-      - name: Deploy to production
+      - name: Deploy backend to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
+      - name: Wait for 30 seconds
+        run: sleep 60    
+
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    needs: deploy-backend     
+    steps:
+      - name: Deploy frontend to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_FRONTEND_SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API_KEY }}        
