--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -2,9 +2,11 @@ name: Library-Catalog CI/CD
 
 on:
   push:
-    branches: []
+    branches-ignore: ["main"]
   pull_request:
     branches: ["main"]
+    types: 
+      - closed
   workflow_dispatch:
 
 jobs:
@@ -31,10 +33,7 @@ jobs:
   deploy-backend:
     runs-on: ubuntu-latest
     needs: build 
-    if: |
-      github.event_name == 'pull_request' &&
-      github.event.action == 'closed' &&
-      github.event.pull_request.base.ref == 'main'    
+    if: github.event.pull_request.merged == true                
     steps:
       - name: Deploy backend to production
         uses: johnbeynon/render-deploy-action@v0.0.8
